--- a/manifest.yml
+++ b/manifest.yml
@@ -1,9 +1,10 @@
 applications:
 - path: .
+  name: POLLUTION
   memory: 128M
   command: sh run.sh
+  buildpack: https://github.com/cloudfoundry/python-buildpack
   instances: 1
   domain: mybluemix.net
-  name: POLLUTION
   host: pollution
   disk_quota: 1024M
