--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,8 @@
 applications:
-- name: POLLUTION
+- path: .
   memory: 128M
-  command: sh run.sh
-  buildpack: https://github.com/cloudfoundry/python-buildpack
+  instances: 1
+  domain: mybluemix.net
+  name: POLLUTION
+  host: pollution
+  disk_quota: 1024M
