--- a/manifest.yml
+++ b/manifest.yml
@@ -2,3 +2,5 @@
 applications:
 - name: POLLUTION
   memory: 128M
+  command: sh run.sh
+  buildpack: https://github.com/ephoning/heroku-buildpack-python
